fix: header z-index

--- a/assets/scss/layout/header/_header.scss
+++ b/assets/scss/layout/header/_header.scss
@@ -5,6 +5,7 @@
   top: 0;
   padding: 15px 20px;
   display: flex;
+  z-index: 99;
   &-header {
     padding: 35px;
   }
